Fix fontsize was too big

--- a/src/app/projecs/projecs.component.scss
+++ b/src/app/projecs/projecs.component.scss
@@ -180,7 +180,7 @@ span {
   margin: 0;
   > h2 {
     margin: 0;
-    font-size: 64px;
+    font-size: 55px;
   }
   h1 {
     font-family: "Fira Code", sans-serif;
